lifeguard-derive/tests/ui/compile_error_partial_model_trailing_colons.stderr
error: Entity path has trailing colons. Found empty segment at end in #[lifeguard(entity = "UserEntity::")]. Use a valid path like "foo::Entity" or "Entity".
  --> tests/ui/compile_error_partial_model_trailing_colons.rs:10:12
   |
10 | pub struct UserPartial {
   |            ^^^^^^^^^^^

error[E0601]: `main` function not found in crate `$CRATE`
  --> tests/ui/compile_error_partial_model_trailing_colons.rs:13:2
   |
13 | }
   |  ^ consider adding a `main` function to `$DIR/tests/ui/compile_error_partial_model_trailing_colons.rs`
